--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,14 @@
     "start": "statping --port 8080 > /dev/null"
   },
   "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "~7.3",
+    "@babel/plugin-proposal-decorators": "~7.3",
+    "@babel/plugin-proposal-json-strings": "~7.2",
+    "@babel/plugin-syntax-dynamic-import": "~7.2",
+    "@babel/plugin-syntax-import-meta": "~7.2",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/polyfill": "~7.2",
     "@fortawesome/fontawesome-free-solid": "^5.1.0-3",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
@@ -42,14 +50,6 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "~7.3",
-    "@babel/plugin-proposal-decorators": "~7.3",
-    "@babel/plugin-proposal-json-strings": "~7.2",
-    "@babel/plugin-syntax-dynamic-import": "~7.2",
-    "@babel/plugin-syntax-import-meta": "~7.2",
-    "@babel/polyfill": "~7.2",
-    "@babel/preset-env": "^7.9.5",
     "@kazupon/vue-i18n-loader": "^0.5.0",
     "@vue/babel-preset-app": "^4.1.2",
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -92,11 +92,11 @@
     "vue-style-loader": "~4.1",
     "vue-template-compiler": "~2.6",
     "wait-on": "^4.0.1",
-    "webpack": "~4.29",
+    "webpack": "^4.36",
     "webpack-bundle-analyzer": "^3.7.0",
-    "webpack-cli": "~3.2",
-    "webpack-dev-server": "~3.1",
-    "webpack-hot-middleware": "~2.24",
-    "webpack-merge": "~4.2"
+    "webpack-cli": "^3.2",
+    "webpack-dev-server": "^3.1",
+    "webpack-hot-middleware": "^2.24",
+    "webpack-merge": "^4.2"
   }
 }
